--- a/style.css
+++ b/style.css
@@ -1,11 +1,36 @@
-.sectionLogin {
+.loginMainContainer{
   display: block;
 }
 
-.sectionMapa {
+.mapViewMainContainer {
   display: none;
 }
 
-.sectionPlaceInfo {
+.placeInfoMainContainer {
   display: none;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.title {
+  font-size: 25px;
+  font-weight: 700;
+}
+.subTitle {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.texto1 {
+  font-size: 10px;
+  font-weight: 300;
+}
+
+.texto2 {
+  font-size: 8px;
+  font-weight: 200;
 }
