--- a/src/styles/loginStyle.css
+++ b/src/styles/loginStyle.css
@@ -108,3 +108,19 @@
 
 /* Hide default HTML checkbox */
 input {display:none;}
+
+.buttonLogin{
+  width: 50%;
+  /* height: 100%; */
+  background-color: #2F5DFF;
+  border-radius: 5px;
+  border-width: 0px;
+  color: white;
+  font-size: small;
+  margin-top: 15%;
+}
+
+.iconsAuth{
+  width: 25px;
+  height: 25px;
+}
