--- a/src/styles/loginStyle.css
+++ b/src/styles/loginStyle.css
@@ -75,7 +75,7 @@
   left: 4px;
   bottom: 4px;
   border-radius: 50%;
-  background-color: #2F5DFF;
+  background-color: #4A90E2;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -97,7 +97,7 @@
   left: 4px;
   bottom: 4px;
   border-radius: 50%;
-  background-color: #2F5DFF;
+  background-color: #4A90E2;
   box-shadow: 0 0 1px #2196F3;
   -webkit-transition: .4s;
   transition: .4s;
@@ -109,15 +109,27 @@
 /* Hide default HTML checkbox */
 input {display:none;}
 
+.authButtonContainer{
+  text-align: center;
+}
+
 .buttonLogin{
   width: 50%;
   /* height: 100%; */
-  background-color: #2F5DFF;
   border-radius: 5px;
   border-width: 0px;
   color: white;
   font-size: small;
   margin-top: 15%;
+  box-shadow: #949494;
+}
+
+.fb{
+  background-color: #3B5998;
+}
+
+.google{
+  background-color: #d34836;
 }
 
 .iconsAuth{
