--- a/src/styles/loginStyle.css
+++ b/src/styles/loginStyle.css
@@ -139,3 +139,39 @@ input {display:none;}
   width: 25px;
   height: 25px;
 }
+
+#splash{
+  background-color: #F2994A;
+  width: 100%;
+  height: 1000px;
+  text-align: center;
+}
+.loader{
+  margin-left: 40%;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #333333;
+  width: 60px;
+  height: 60px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+.hidden{
+  display: none;
+}
+.show{
+  display: block;
+}
