--- a/src/styles/mapViewStyle.css
+++ b/src/styles/mapViewStyle.css
@@ -1,10 +1,4 @@
 .map {
-
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-}
-
   width: 100vw;
   height: 100vh;
   position: relative;
@@ -17,22 +11,51 @@
   left: 0;
   z-index: 999;
   width: 100%;
-  height: 20%;
+  height: 23%;
+  display: inline;
 }
 
-.userProfilePicture{
-  width: 100%;
-  height: 100%;
+.userImg{
+  width: 65px;
+  height: 65px;
+  display: inline-flex;
+  margin-left: 5%;
+  margin-right: 2%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 .userInfoText{
+  display: -webkit-inline-box;
+  color: white;
+  margin-bottom: 0px;
+}
 
+.logOut{
+  position: absolute;
+  /* margin-right: 20%; */
+  /* margin-top: 20%; */
+  margin-bottom: 5%;
+  top: 60px;
+  right: 10px;
+  padding: 0px !important;
+  font-size: xx-large !important;
+  /* padding-right: 6% !important; */
+  padding: auto;
+  float: right;
+  color: white;
+  background-color: #4A90E2;
 }
 .footerContainer{
-
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  text-align: center;
 }
 .footerButton{
-
+  background-color: #4A90E2;
 }
 .footerIcon{
-
+  color:white;
 }
