--- a/public/src/styles/mapViewStyle.css
+++ b/public/src/styles/mapViewStyle.css
@@ -1,4 +1,5 @@
-.map {
+
+#mapContainer{
     width: 100vw;
     height: 100vh;
     position: relative;
@@ -29,6 +30,7 @@
     display: -webkit-inline-box;
     color: white;
     margin-bottom: 0px;
+    font-size: medium;
 }
 
 .logOut {
